save currency conversion rate, use asynchronous calls